# utils-scripts

./: README.md  file_count_size.sh  pyproject.toml
src/utils_scripts/: delete_virtual_envs.py  findvirtualenviornments.py
src/utils_scripts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
