[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utils-scripts"
version = "0.1.0"
description = "Collection of reusable utility scripts"
authors = [
  { name = "Paul Davis", email = "pdavis@askbigplay.com" }
]
dependencies = []

[project.scripts]
delete-venvs = "utils_scripts.delete_virtual_envs:main"
